--- a/package.json
+++ b/package.json
@@ -2,14 +2,29 @@
   "name": "scallmovie",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.15",
+    "typescript": "^4.6.3"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap-icons": "^1.10.5",
+    "i18next": "^23.2.11",
+    "primeflex": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.63.6",
+    "styled-components": "^5.3.5",
+    "zustand": "^4.4.6"
   },
   "scripts": {
     "start": "react-scripts start",
